# CalendarSlam

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
app/: Cargo.toml  index.html  styles.css
app/src/: api.rs  main.rs  mp.rs  share.rs  sim.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
data/: fixture.sql
data-prep/: Cargo.toml
data-prep/src/: main.rs
docs/: phase-1-validation.md
server/: Cargo.toml
server/migrations/: 0001_editions.sql  0002_runs.sql  0003_champion_strength.sql  0004_player_profiles.sql  0005_trademark.sql  0006_return_rating.sql  0007_run_points.sql
server/src/: assets.rs  db.rs  main.rs  routes.rs
