[package]
name = "calendar-slam-data-prep"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
calendar-slam-shared = { path = "../crates/shared" }
chrono.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
